<resources>
    <string name="app_name">My Notes</string>
    <string name="send_as_mail">Send as mail</string>
    <string name="title_activity_note">Edit Note</string>
    <string name="title_activity_drawer">Note Keeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <string name="course">Course</string>
    <string name="title">Title</string>
    <string name="note_title">Note title</string>
    <string name="note_text">Note text</string>
    <string name="now_share_message">Don\'t you think you\'ve shared enough</string>
    <string name="send_message">Send</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="general_header">General</string>
    <string name="messages_header">Notifications</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="email_key" >user_email_text</string>
    <string name="email_title">Email Address</string>
    <string name="name_key">user_display_name</string>
    <string name="name_title">Display Name</string>
    
    <string-array name="pref_entries_favorite_social">
        <item>GooglePlus</item>
        <item>Facebook</item>
        <item>Twitter</item>
    </string-array>
    <string-array name="pref_values_favorite_social">
        <item>http://plus.google.com</item>
        <item>http://facebook.com</item>
        <item>http://twitter.com</item>
    </string-array>
    <string name="pref_default_favorite_social">http://plus.google.com</string>
    <string name="Display_name_summary">Your Name</string>
    <string name="email_summary">yourname@local.com</string>
    <string name="social_summary">Google</string>
</resources>
