<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:fragment="com.example.mynotes.SettingsActivity$GeneralFragment"
        app:icon="@drawable/ic_info_black_24dp"
        app:key="messages_header"
        app:title="@string/general_header" />

    <Preference
        app:fragment="com.example.mynotes.SettingsActivity$MessagesFragment"
        app:icon="@drawable/ic_notifications_active_black_24dp"
        app:key="messages_header"
        app:title="@string/messages_header" />

    <Preference
        app:fragment="com.example.mynotes.SettingsActivity$SyncFragment"
        app:icon="@drawable/ic_sync_black_24dp"
        app:key="sync_header"
        app:title="@string/sync_header" />

</PreferenceScreen>
